[gd_scene load_steps=22 format=3 uid="uid://blqvvu0ytchcd"]

[ext_resource type="Script" uid="uid://bptrhmi4tcomm" path="res://ai/state_machine.gd" id="2_ixsl6"]
[ext_resource type="Script" uid="uid://cskdd0xcjjmfc" path="res://actors/zombie/zombie_wander.gd" id="4_8jy1d"]
[ext_resource type="Script" uid="uid://b1vk2g6nxw2g" path="res://actors/zombie/zombie_chase.gd" id="4_s7rjo"]
[ext_resource type="Script" uid="uid://dt4kadfyw2ywh" path="res://actors/zombie/zombie_target.gd" id="4_ymihc"]
[ext_resource type="Script" uid="uid://y6xyi4gu5uqa" path="res://actors/zombie/zombie_last_seen.gd" id="5_8jy1d"]
[ext_resource type="Script" uid="uid://bbflvir0kv6hb" path="res://ai/state_machine_debug.gd" id="7_3fose"]
[ext_resource type="Script" uid="uid://gyp8bshfrfoj" path="res://actors/generic/health.gd" id="8_23tyx"]
[ext_resource type="PackedScene" uid="uid://dfb3edd4wnnag" path="res://actors/character_sprite.tscn" id="9_culwy"]
[ext_resource type="Script" uid="uid://dn7fydgbbk3wg" path="res://actors/zombie/zombie_death.gd" id="9_oyhgy"]
[ext_resource type="Texture2D" uid="uid://doueacum5bmne" path="res://actors/sprites/head/head_zombie_1.png" id="10_mmehc"]
[ext_resource type="Texture2D" uid="uid://diqa5jjgkpomp" path="res://actors/sprites/torso/torso_zombie.png" id="11_eew4g"]
[ext_resource type="Texture2D" uid="uid://bcrncjn0sri3i" path="res://actors/sprites/hand/hands_zombie_1.png" id="12_b6tq7"]
[ext_resource type="Script" uid="uid://c8dnwtjdg5wbq" path="res://audio/footsteps.gd" id="13_mmehc"]
[ext_resource type="AudioStream" uid="uid://cytdvns5e1i4a" path="res://audio/grass_1.mp3" id="14_xsj0l"]
[ext_resource type="AudioStream" uid="uid://dy7u36uymvova" path="res://audio/grass_2.mp3" id="15_mr8wc"]
[ext_resource type="AudioStream" uid="uid://d4cb26dn2ofoj" path="res://audio/grass_3.mp3" id="16_ubgnx"]
[ext_resource type="Script" uid="uid://cy65fv0u3uiga" path="res://item/generic/item_equip_display.gd" id="16_xsj0l"]
[ext_resource type="Script" uid="uid://b7nergdxei2p6" path="res://actors/zombie/zombie_arms.gd" id="18_ubgnx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_roy8y"]
radius = 433.029

[sub_resource type="CircleShape2D" id="CircleShape2D_jmu02"]
radius = 176.026

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3fose"]
size = Vector2(50, 81)

[node name="Zombie" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 0

[node name="CharacterSprite" parent="." instance=ExtResource("9_culwy")]
head_texture = ExtResource("10_mmehc")
torso_texture = ExtResource("11_eew4g")
left_arm_texture = ExtResource("12_b6tq7")
right_arm_texture = ExtResource("12_b6tq7")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true

[node name="Vision" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision"]
shape = SubResource("CircleShape2D_roy8y")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_jmu02")

[node name="ZombieStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_ixsl6")
initial_state = NodePath("Wander")
metadata/_custom_type_script = "uid://bptrhmi4tcomm"

[node name="Wander" type="Node" parent="ZombieStateMachine" node_paths=PackedStringArray("wander_timer", "character", "vision", "nav", "target", "raycast")]
script = ExtResource("4_8jy1d")
wander_timer = NodePath("../../WanderTimer")
character = NodePath("../..")
vision = NodePath("../../Vision")
nav = NodePath("../../NavigationAgent2D")
target = NodePath("../../ZombieTarget")
raycast = NodePath("../../ObstructionRaycast")

[node name="Chase" type="Node" parent="ZombieStateMachine" node_paths=PackedStringArray("character", "vision", "raycast", "nav", "target")]
script = ExtResource("4_s7rjo")
chase_speed = 130
character = NodePath("../..")
vision = NodePath("../../Vision")
raycast = NodePath("../../ObstructionRaycast")
nav = NodePath("../../NavigationAgent2D")
target = NodePath("../../ZombieTarget")

[node name="Last_Seen" type="Node" parent="ZombieStateMachine" node_paths=PackedStringArray("character", "vision", "raycast", "nav", "target")]
script = ExtResource("5_8jy1d")
speed = 100
character = NodePath("../..")
vision = NodePath("../../Vision")
raycast = NodePath("../../ObstructionRaycast")
nav = NodePath("../../NavigationAgent2D")
target = NodePath("../../ZombieTarget")

[node name="ZombieTarget" type="Node" parent="."]
script = ExtResource("4_ymihc")

[node name="WanderTimer" type="Timer" parent="."]
wait_time = 2.7
autostart = true

[node name="ObstructionRaycast" type="RayCast2D" parent="."]
target_position = Vector2(0, 0)
collision_mask = 2

[node name="StateMachineDebug" type="Label" parent="." node_paths=PackedStringArray("state_machine")]
offset_right = 40.0
offset_bottom = 23.0
script = ExtResource("7_3fose")
state_machine = NodePath("../ZombieStateMachine")
metadata/_custom_type_script = "uid://bbflvir0kv6hb"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_3fose")

[node name="Health" type="Node" parent="."]
script = ExtResource("8_23tyx")
max_health = 1
metadata/_custom_type_script = "uid://gyp8bshfrfoj"

[node name="ZombieDeath" type="Node" parent="."]
script = ExtResource("9_oyhgy")
metadata/_custom_type_script = "uid://dn7fydgbbk3wg"

[node name="Footsteps" type="AudioStreamPlayer2D" parent="." node_paths=PackedStringArray("character_sprite")]
bus = &"zombie"
script = ExtResource("13_mmehc")
character_sprite = NodePath("../CharacterSprite")
clips = Array[AudioStream]([ExtResource("14_xsj0l"), ExtResource("15_mr8wc"), ExtResource("16_ubgnx")])
metadata/_custom_type_script = "uid://c8dnwtjdg5wbq"

[node name="Items" type="Node2D" parent="."]

[node name="ItemEquipDisplay" type="Node2D" parent="Items" node_paths=PackedStringArray("user")]
script = ExtResource("16_xsj0l")
user = NodePath("../..")
distance_from_user = 40
metadata/_custom_type_script = "uid://cy65fv0u3uiga"

[node name="ZombieArms" type="Node2D" parent="."]
script = ExtResource("18_ubgnx")

[connection signal="target_acquired" from="ZombieStateMachine/Chase" to="CharacterSprite" method="_move_left_hand"]
[connection signal="target_acquired" from="ZombieStateMachine/Chase" to="CharacterSprite" method="_move_right_hand"]
[connection signal="target_emitted" from="ZombieStateMachine/Chase" to="Items/ItemEquipDisplay" method="_update_target"]
[connection signal="target_emitted" from="ZombieStateMachine/Chase" to="ZombieArms" method="_set_target"]
[connection signal="target_lost" from="ZombieStateMachine/Chase" to="CharacterSprite" method="_reset_right_hand_pos"]
[connection signal="target_lost" from="ZombieStateMachine/Chase" to="CharacterSprite" method="_reset_left_hand_pos"]
[connection signal="died" from="Health" to="ZombieDeath" method="_on_death"]
[connection signal="left_hand_pos_emitted" from="ZombieArms" to="CharacterSprite" method="_set_left_hand_pos"]
[connection signal="right_hand_pos_emitted" from="ZombieArms" to="CharacterSprite" method="_set_right_hand_pos"]
